--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
   "dependencies": {
     "@tanstack/react-query": "^4.24.6",
     "axios": "^1.3.3",
+    "i18next": "^22.4.9",
+    "i18next-browser-languagedetector": "^7.0.1",
+    "i18next-http-backend": "^2.1.1",
     "json-server": "^0.17.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^12.1.5",
     "react-router-dom": "^6.8.1",
     "sass": "^1.58.1"
   },
